@@ -1,8 +1,9 @@
 grpc-test (1.5.0) UNRELEASED; urgency=medium
 
   * deamon mode for client
+  * fix: error from absl during shutdown
 
- -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 19 Feb 2024 15:14:22 +0100
+ -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 19 Feb 2024 16:52:39 +0100
 
 grpc-test (1.4.0) unstable; urgency=medium
 
